# Skin_cancer_Detection_website

./: .gitignore  pyproject.toml
app/: __init__.py  config.py
app/models/: __init__.py  appointment.py  diagnosis.py  doctor.py  patient.py  test_report.py  treatment.py  user.py
app/routes/: __init__.py  admin.py  auth.py  doctor.py  main.py  patient.py
app/services/: __init__.py  storage_service.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: base.html  index.html  register.html
app/templates/admin/: create_doctor.html  dashboard.html  view_profiles.html
app/templates/doctor/: dashboard.html  edit_profile.html  profile.html  queries.html  respond_query.html
app/templates/patient/: appointments.html  dashboard.html  edit_profile.html  profile.html  submit_test.html  view_result.html
app/utils/: __init__.py  date_utils.py  file_handling.py  image_processing.py  ml_model.py
instance/: app.db
tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_doctor.py  test_patient.py
